mTLS-2.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: selective-mtls
  namespace: production
spec:
  selector:
    matchLabels:
      app: payments
  mtls:
    mode: STRICT
