istio-service-mesh.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-backend-to-db
spec:
  selector:
    matchLabels:
      app: postgres
  rules:
    - from:
        - source:
            principals: ["cluster.local/ns/backend/sa/default"]
