OPA-mutating-webhook.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8ssetrunasnonroot
spec:
  crd:
    spec:
      names:
        kind: K8sSetRunAsNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8ssetrunasnonroot

        mutate[{"op": "add", "path": "/spec/containers/0/securityContext/runAsNonRoot", "value": true}] {
          container := input.review.object.spec.containers[0]
          not container.securityContext
        }
