disallowing-privileged-containers-3.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8strustedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sTrustedRepos
      validation:
        openAPIV3Schema:
          properties:
            repos:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8strustedrepos
        
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          image := container.image
          not startswith_any(image, input.parameters.repos)
          msg := sprintf("Container %v uses untrusted image registry: %v", [container.name, image])
        }
        
        violation[{"msg": msg}] {
          container := input.review.object.spec.initContainers[_]
          image := container.image
          not startswith_any(image, input.parameters.repos)
          msg := sprintf("Init container %v uses untrusted image registry: %v", [container.name, image])
        }
        
        startswith_any(image, repos) {
          repo := repos[_]
          startswith(image, repo)
        }
